--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! This is cool!</h1>
+<h1>Hello Coursera! This is what course has taught me.</h1>
 <h2>GitHub</h2>
 Steps:<br>
 1. Create your own repository on GitHub. And then how to turn that repository into something you could store your code in your website code in. And then have that same repository turn around and host your website for you.<br>
